Scout rework (#6104)